--- a/index.html
+++ b/index.html
@@ -127,14 +127,16 @@
     <p>Post a message NOT to use the "General Channel". When we get over 100 people talking over 6 weeks, this becomes a mess.🤪</p>
     <img src="images/teams-message.webp">
 
-    <h3>Change the Teams Icon</h3>
-    <p>To change your team image:</p>
+    <h3>Change the Teams Inforamtion</h3>
     <ul>
-      <li>Select Teams on the left of Teams, and go to a team in your list</li>
-      <li>To the right of the team name, select More options More options button > Manage team Settings button (Gear)</li>
-      <li>In the Settings tab, expand Team details and select Change picture Upload icon under the existing team picture.</li>
-      <li>Select an avatar or select Upload picture to choose a new image from your files, or Delete to remove the chosen team picture.</li>
-      <li>Select Save to save your new team picture.</li>
+      <li>Select the Teams icon on the left panel.</li>
+      <li>Click the new WDD231 team in your list.</li>
+      <li>To the right of the team name, select the &mldr; and choose "Manage team" from the drop down menu</li>
+      <li>Click the Settings tab. Then expand "Team details" section.</li>
+      <li>Update the team name to include WDD231 and Block 1 or Block 2 (as appropiate)</li>
+      <li>Click the "Change picture" link and select "Upload" to choose a new image from your files.</li>
+      <li>Remember to save. </li>
+      <li>NOTE: you may need to wait till after class has started to make the icon change.</li>
     </ul>
   <p>Here are my icons if you want to use them for the <a href="images/231-teams-icon-b1.png" target="_blank">first block</a> and the <a href="images/231-teams-icon-b2.png" target="_blank">second block</a>.</p>
 
