--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </div>
 
     <div class="problem">
-      <p><strong>Non-participating Students:</strong> Towards the end of the week, message students who have not yet submitted the "W01 Setup: Course Environment". Inform them that this is a 7-week course, and remind them of the upcoming registration deadline. Send a personalized version of the following message:</p>
+      <p><strong>Non-participating Students:</strong> Towards the end of the week, message students who have not yet submitted the "W01 Setup: Technology Stack". Inform them that this is a 7-week course, and remind them of the upcoming registration deadline. Send a personalized version of the following message:</p>
       <section>
         <p>SUBJECT: Checking In</p>
         <p>I noticed you haven't turned in the first assignment. This course is only seven weeks long and ends on <span id="classEnd"></span>. To succeed in this block, it will be important for you to get started as soon as you can. Is there something that might be keeping you from getting started in this class? Please email me so we can work together to help you have a successful experience.</p>
