--- a/index.html
+++ b/index.html
@@ -292,10 +292,9 @@
         <p><strong>Group of One:</strong> On Monday, go to Canvas and review the  People > WDD231Groups and identify all students in a group of one. Return to Canvas and using the Inbox > Compose a New Message send a message to this list of single group students.</p>
         <section>
           <p>SUBJECT: Selecting a new group</p>
-          <p>It appears that you are the only student who signed up for your group time.
-            In order to complete the group activities each week you will need to join another group.
-            Please go back to Canvas and add yourself to a different group and then go to Teams and introduce yourself to your new group. You will need to attend a group meeting this week so do this today if possible.<br>
-            Bro/Sister Smith</p>
+          <p>You appear to be the only student who signed up for your group time. 🤪 To complete the group activities each week, you must join another group. Please go back to Canvas and add yourself to a different group, and then go to Teams and introduce yourself to your new group. 
+          You must attend a group meeting this week, so do this today if possible.<br>
+          Bro/Sister Smith</p>
         </section>
     </div><!-- end problem -->
 
