--- a/index.html
+++ b/index.html
@@ -313,10 +313,7 @@
         email.</p>
       <section>
         <p>SUBJECT: Missing the Week 1 Course Home Page Development</p>
-        <p>I noticed you have not turned in the first assignment. Because the course is only seven weeks long, to
-          succeed it will be important for you to be engaged in this course every week. Is there something that might be
-          keeping you from engaging in this class? Please email me so we can work together to help you have a successful
-          term.</p>
+        <p>I noticed you have not turned in the first assignment. Because the course is only seven weeks long, to succeed, it will be vital for you to be engaged in this course every week. Is there something that might be keeping you from engaging in this class? Please email me so we can work together to help you have a successful term.😊</p>
 
         <p>If you do not intend to participate in this course this term, I recommend that you drop the course before the drop deadline on <span id="dropDeadline"></span>. Depending on your situation, you may be able to receive a prorated tuition refund. If you choose to drop the class after the drop deadline, you will receive a "W" grade on your transcript for this course.</p>
 
