--- a/index.html
+++ b/index.html
@@ -264,17 +264,7 @@
       <p><b>All Week:</b> Keep checking MS Teams and your email and respond to any questions that have been posted.</p>
     </div><!-- end risk -->
 
- 
 
-    <div class="good">
-      <p><strong>Positive Outreach:</strong> On Friday, reach out to all students who scored more than 24/30 on the <strong>W01 Assignment: Course Home Page</strong> assignment and congratulate them on a job well done. </p>
-      <section>
-        <p>SUBJECT: Congratulation on a job well done!</p>
-        <p>I see that you have already completed the course home page for this week. Congratulations on completing the assignment early.</p>
-        <p>Did you feel that your previous classes properly prepared you to complete the GitHub Home Page review assignment in this course?</p>
-      <p>Bro/Sister Smith</p>
-      </section>
-    </div>
 
     <div class="outreachdue">
       <p><a href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=1&CMG=1&CourseCode=WDD%20231">Report your week 1 outreach</a> by midnight on <span id="week01report"></span></p>
@@ -331,10 +321,10 @@
 
 
     <div class="good">
-      <p><strong>Positive Outreach: </strong>On Thursday, identify students who scored more than 24/30 on <strong>W01 Activity: Course Home Page Development</strong> and send them a message congratulating them on their work.</p>
+      <p><strong>Positive Outreach: </strong>On Thursday, identify students who scored more than 24/30 on <strong>W01 Assignment: Course Home Page</strong> and send them a message congratulating them on their work.</p>
         <section>
           <p>SUBJECT: Good work on your Home Page</p>
-          <p>I see that you have done well on the Chamber Directory Page from last week. Keep up the good work.<br>
+          <p>I see that you have done well on the Home Page from last week. Keep up the good work.<br>
             Do you ever find yourself without power or internet access when trying to work on this class?
             <br>Bro/Sister Smith</p>
         </section>
@@ -393,11 +383,10 @@
 
 
     <div class="good">
-      <p><strong>Positive Outreach: </strong>On Thursday, identify students who scored more than 24/30 on "
-        W02 Assignment: Chamber Directory Page" and send them a message congratulating them on their work.</p>
+      <p><strong>Positive Outreach: </strong>On Thursday, identify students who scored more than 24/30 on "<strong>W02 Assignment: Chamber Directory Page</strong>" and send them a message congratulating them on their work.</p>
         <section>
           <p>SUBJECT: Congratulations on your directory page</p>
-          <p>I see that you have done well on the GitHub Home Page from last week.
+          <p>I see that you have done well on the Directory Page from last week.
             <br>Have you had opportunities to help out members of your team? 😁
             <br>Bro/Sister Smith</p>
         </section>
@@ -516,11 +505,10 @@
     <!-- START WEEK 6 HERE -->
     <h2>WEEK 06 Outreach - <span id="week06start"></span></h2>
     <div class="problem">
-      <p><strong>Late Work:</strong> On Monday, select the <strong>W05 Assignment: Chamber Discover Page</strong> in the gradebook
-        and message students who have <b>not submitted</b> the assignment. Send a personalized version of the following email.</p>
+      <p><strong>Late Work:</strong> On Monday, select the <strong>W05 Assignment: Chamber Discover Page</strong> in the gradebook and message students who have <b>not submitted</b> the assignment. Send a personalized version of the following email.</p>
       <section>
         <p>SUBJECT: Missing last weeks discover page</p>
-        <p>I noticed that you have not yet submitted last week's discover page on your GitHub home page. As you know, you can still turn it in without late penalties. </p>
+        <p>I noticed that you have not yet submitted last week's discover page on your Chamber Site. As you know, you can still turn it in without late penalties. </p>
         <p>Was your team able to meet this week?</p>
         <p>Bro/Sister Smith</p>
       </section>
