--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
     </div>
 
-    <div class="good">
+    <div class="announce">
       <p>Post your version of the following message to Canvas Announcements</p>
       <section>
       <p>SUBJECT: Welcome to Class</p>
@@ -206,8 +206,8 @@
 
     <!-- START WEEK 1 HERE -->
     <h2>WEEK 01 Outreach - <span id="week01start"></span></h2>
-    <div class="good">
-      <p><strong>MS Teams:</strong> On Monday, post the following message to the "General Questions - Week 1" discussion. </p>
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post the following Announcement to the "General Questions - Week 1" discussion. </p>
       <section>
         <p>SUBJECT: Group Work for Week 1</p>
         <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself to your new group of friends.</p>
@@ -278,6 +278,16 @@
 
     <!-- START WEEK 2 HERE -->
     <h2>WEEK 02 Outreach - <span id="week02start"></span></h2>
+
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
+      <section>
+        <p>SUBJECT: Looking forward to this module.</p>
+        <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰</p>
+      </section>
+    </div>
+
+
     <div class="problem">
         <p><strong>Group of One:</strong> On Monday, go to Canvas and review the  People > WDD231Groups and identify all students in a group of one. Return to Canvas and using the Inbox > Compose a New Message send a message to this list of single group students.</p>
         <section>
@@ -343,6 +353,15 @@
 
     <!-- START WEEK 3 HERE -->
     <h2>WEEK 03 Outreach - <span id="week03start"></span></h2>
+
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
+      <section>
+        <p>SUBJECT: Playing with the Big Boys Now</p>
+        <p>This week you get to interact with a professional level weather API and report dynamic data on your very own website. Another really great skill  for your portfolio toolbox.</p>
+      </section>
+    </div>
+
     <div class="problem">
       <p><strong>Late Work:</strong> On Monday, select the <strong>W02 Assignment: Chamber Directory Page</strong> in the gradebook
         and message students who have <b>not submitted</b> the assignment. Send a personalized version of the following
@@ -414,6 +433,14 @@
 
     <!-- START WEEK 4 HERE -->
     <h2>WEEK 04 Outreach - <span id="week04start"></span></h2>
+
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
+      <section>
+        <p>SUBJECT: More tools for your toolbox</p>
+        <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dymanivally creating these modals using JavaScript. Before you go, we also have an enhancment  to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 </p>
+      </section>
+    </div>
     
     <div class="problem">
       <p><strong>Late Work:</strong> On Monday, select the <strong>W03 Assignment: Chamber Home Page</strong> in the gradebook
@@ -465,6 +492,13 @@
     <!-- START WEEK 5 HERE -->
     <h2>WEEK 05 Outreach - <span id="week05start"></span></h2>
 
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
+      <section>
+        <p>SUBJECT: Finishing up the Chamber Page</p>
+        <p>Were getting close to the end so hang on and keep taking your vitiman pills. THis week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live.</p>
+      </section>
+    </div>
 
     <div class="problem">
       <p><strong>Late Work:</strong> On Monday, select the <strong>W04 Assignment: Chamber Join Page</strong> in the gradebook
@@ -504,6 +538,15 @@
 
     <!-- START WEEK 6 HERE -->
     <h2>WEEK 06 Outreach - <span id="week06start"></span></h2>
+
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
+      <section>
+        <p>SUBJECT: The beginning of the end of this class.</p>
+        <p>This week you are working full time on creating something that did not exist before, a beautiful web site that shows everything you have learned in this class and over the past several classes. No teamwork required this time, you on your own. 😇</p>
+      </section>
+    </div>
+
     <div class="problem">
       <p><strong>Late Work:</strong> On Monday, select the <strong>W05 Assignment: Chamber Discover Page</strong> in the gradebook and message students who have <b>not submitted</b> the assignment. Send a personalized version of the following email.</p>
       <section>
@@ -538,6 +581,15 @@
 
     <!-- START WEEK 7 HERE -->
     <h2>WEEK 07 Outreach - <span id="week07start"></span></h2>
+
+    <div class="announce">
+      <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
+      <section>
+        <p>SUBJECT: Final Exam</p>
+        <p>This week is the big exam so I will just go over here and wait quietly till you are done. Good Luck 😊</p>
+      </section>
+    </div>
+
     <div class="problem">
       <p>On Monday, send the following message to <b>ALL</b> students in the course. Use the Canvas InBox > Compose a New Message > to all in this class.</p>
       <img src="images/msgAllStudents.webp">
