--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
 
-    <!-- START A NEW WEEK HERE -->
+    <!-- *********************** START A NEW WEEK HERE *********************** -->
     <h2>Before Class Begins - <span id="sendWelcomeEmail"></span></h2>
     <h3>Send an Email</h3>
     
@@ -204,14 +204,14 @@
 
 
 
-    <!-- START WEEK 1 HERE -->
+    <!-- *********************** START WEEK 1 HERE *********************** -->
     <h2>WEEK 01 Outreach - <span id="week01start"></span></h2>
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post the following Announcement to the "General Questions - Week 1" discussion. </p>
       <section>
         <p>SUBJECT: Group Work for Week 1</p>
         <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself to your new group of friends.</p>
-        <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building your course portal home page. You could share your page link with the other members of your group.</p>
+        <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building your course portal home page. You could share your page link with the other members of your group. If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -276,14 +276,14 @@
     </p>
 
 
-    <!-- START WEEK 2 HERE -->
+    <!-- *********************** START WEEK 2 HERE *********************** -->
     <h2>WEEK 02 Outreach - <span id="week02start"></span></h2>
 
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
         <p>SUBJECT: Looking forward to this module.</p>
-        <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰</p>
+        <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰 If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -351,7 +351,7 @@
 
 
 
-    <!-- START WEEK 3 HERE -->
+    <!-- *********************** START WEEK 3 HERE *********************** -->
     <h2>WEEK 03 Outreach - <span id="week03start"></span></h2>
 
     <div class="announce">
@@ -431,7 +431,7 @@
 
 
 
-    <!-- START WEEK 4 HERE -->
+    <!-- *********************** START WEEK 4 HERE *********************** -->
     <h2>WEEK 04 Outreach - <span id="week04start"></span></h2>
 
     <div class="announce">
@@ -489,14 +489,14 @@
 
 
 
-    <!-- START WEEK 5 HERE -->
+    <!-- *********************** START WEEK 5 HERE *********************** -->
     <h2>WEEK 05 Outreach - <span id="week05start"></span></h2>
 
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
         <p>SUBJECT: Finishing up the Chamber Page</p>
-        <p>Were getting close to the end so hang on and keep taking your vitiman pills. THis week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live.</p>
+        <p>Were getting close to the end so hang on and keep taking your vitiman pills. THis week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live. If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -536,14 +536,14 @@
 
 
 
-    <!-- START WEEK 6 HERE -->
+    <!-- *********************** START WEEK 6 HERE *********************** -->
     <h2>WEEK 06 Outreach - <span id="week06start"></span></h2>
 
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
         <p>SUBJECT: The beginning of the end of this class.</p>
-        <p>This week you are working full time on creating something that did not exist before, a beautiful web site that shows everything you have learned in this class and over the past several classes. No teamwork required this time, you on your own. 😇</p>
+        <p>This week you are working full time on creating something that did not exist before, a beautiful web site that shows everything you have learned in this class and over the past several classes. No teamwork required this time, you on your own. 😇 If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -579,7 +579,7 @@
 
 
 
-    <!-- START WEEK 7 HERE -->
+    <!-- *********************** START WEEK 7 HERE *********************** -->
     <h2>WEEK 07 Outreach - <span id="week07start"></span></h2>
 
     <div class="announce">
