--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <section>
         <p>SUBJECT: Group Work for Week 1</p>
         <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself to your new group of friends.</p>
-        <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building your course portal home page. You could share your page link with the other members of your group. If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
+        <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building your course portal home page. You could share your page link with the other members of your group. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -283,7 +283,7 @@
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
         <p>SUBJECT: Looking forward to this module.</p>
-        <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰 If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
+        <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -357,8 +357,8 @@
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
-        <p>SUBJECT: Playing with the Big Boys Now</p>
-        <p>This week you get to interact with a professional level weather API and report dynamic data on your very own website. Another really great skill  for your portfolio toolbox.</p>
+        <p>SUBJECT: Week 3: Playing with the Big Boys Now</p>
+        <p>This week you get to interact with a professional level weather API and report dynamic data on your very own website. Another really great skill  for your portfolio toolbox. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -437,8 +437,8 @@
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
-        <p>SUBJECT: More tools for your toolbox</p>
-        <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dymanivally creating these modals using JavaScript. Before you go, we also have an enhancment  to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 </p>
+        <p>SUBJECT: Week 4: More tools for your toolbox</p>
+        <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dymanivally creating these modals using JavaScript. Before you go, we also have an enhancment  to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
     
@@ -495,8 +495,8 @@
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
-        <p>SUBJECT: Finishing up the Chamber Page</p>
-        <p>Were getting close to the end so hang on and keep taking your vitiman pills. THis week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live. If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
+        <p>SUBJECT: Week 5: Finishing up the Chamber Page</p>
+        <p>Were getting close to the end so hang on and keep taking your vitiman pills. THis week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -542,8 +542,8 @@
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
-        <p>SUBJECT: The beginning of the end of this class.</p>
-        <p>This week you are working full time on creating something that did not exist before, a beautiful web site that shows everything you have learned in this class and over the past several classes. No teamwork required this time, you on your own. 😇 If you have any questions, please post them in the appripiate weekly discussion channel of MS Teams.</p>
+        <p>SUBJECT: Week 6: The beginning of the end of this class.</p>
+        <p>This week you are working full time on creating something that did not exist before, a beautiful web site that shows everything you have learned in this class and over the past several classes. No teamwork required this time, you on your own. 😇 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
