--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post the following Announcement to the "General Questions - Week 1" discussion. </p>
       <section>
-        <p>SUBJECT: Group Work for Week 1</p>
+        <p>SUBJECT: Week 1: Group Work</p>
         <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself to your new group of friends.</p>
         <p>Asynchronously work with the course via the MS Teams channel to meet this week's requirements on building your course portal home page. You could share your page link with the other members of your group. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
@@ -276,13 +276,22 @@
     </p>
 
 
+
+
+
+
+
+
+
+
+
     <!-- *********************** START WEEK 2 HERE *********************** -->
     <h2>WEEK 02 Outreach - <span id="week02start"></span></h2>
 
     <div class="announce">
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
-        <p>SUBJECT: Looking forward to this module.</p>
+        <p>SUBJECT: Week 2: Looking forward to this module.</p>
         <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
