--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
     <p>Select "Standard" channel</p>
     <img src="images/teams-standard.webp">
 
+    <h3>Add an additional channel called "Job Descriptions (week5). </h3>
+    <p>There will be an assignment later that has student sharing job descriptions they have found</p>
+
     <h3>Add many more public Channels to Teams for Groupwork</h3>
     <p>Add a new channel in MS teams that exactly matches the names of the People>WDD231Groups in canvas (takes about 10
       minutes)</p>
