--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <img src="images/teams-standard.webp">
 
     <h3>Add an additional channel called "Job Descriptions (week5). </h3>
-    <p>There will be an assignment later that has student sharing job descriptions they have found</p>
+    <p>There will be an assignment later that has student sharing job descriptions they have found.</p>
 
     <h3>Add many more public Channels to Teams for Groupwork</h3>
     <p>Add a new channel in MS teams that exactly matches the names of the People>WDD231Groups in canvas (takes about 10
@@ -508,7 +508,7 @@
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
         <p>SUBJECT: Week 5: Finishing up the Chamber Page</p>
-        <p>Were getting close to the end so hang on and keep taking your vitiman pills. THis week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
+        <p>Were getting close to the end so hang on and keep taking your vitiman pills. This week you get to build a new page for your chamber web site that allows people to discover your home town. So be proud of your town and show us some cool things about where you live. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
       </section>
     </div>
 
@@ -555,7 +555,19 @@
       <p><strong>MS Teams:</strong> On Monday, post this announcement to Canvas or Teams.</p>
       <section>
         <p>SUBJECT: Week 6: The beginning of the end of this class.</p>
-        <p>This week you are working full time on creating something that did not exist before, a beautiful web site that shows everything you have learned in this class and over the past several classes. No teamwork required this time, you on your own. 😇 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
+        <p>The final assessment for this class is a multiple-page website, and the best part is that you get to choose the topic.</p>
+
+          <p>Last week, you picked the topic and submitted a project site plan as a single web page.</p>
+
+            <p>This week, you are creating that site! As Elder Uchtdorf shared, "<em>The desire to create is one of the deepest yearnings of the human soul</em>"</p>
+
+              <p>This website will show everything you have learned in this and previous classes for this certificate.</p>
+
+                <p>As you may have noticed, there is no teamwork allowed for this project, you on your own.😇</p>
+
+                  <p>You will create a new repository inside your WDD231 account and host all the files there.</p>
+
+                  <p>My friends, working with you during this class has been a great experience; I wish you the best as you create something extraordinary.</p>
       </section>
     </div>
 
