--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
       <img src="images/msgAllStudents.webp">
       <section>
       <p>SUBJECT: Class ends very soon</p>
-      <p>This awesome WDD231 block class will close on <span id="classOver"></span> at midnight. You must have ALL your assignments submitted by then. The most important submission is your finished Chamber site assignment. (YES, YOU NEED TO SUBMIT THE URL AGAIN). If you have late submissions from units 5 and 6, make sure to resubmit those before class ends as well. Remember you have three opportunities for a regrade. 
+      <p>This awesome WDD231 block class will close on <span id="classOver"></span> at midnight. You must have ALL your assignments submitted by then. The most important submission is your finished <strong>Individual Website Project</strong>. If you have late submissions from units 5 and 6, make sure to resubmit those before class ends as well. Remember you have three opportunities for a regrade. 
       <br>Have you taken the opportunity to pray for the Holy Ghost to help you with any part of your assignment this week?<br>Bro/SisterSmith</p>
     </section>
     </div><!-- end problem -->
