--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
           <p>Last week, you picked the topic and submitted a project site plan as a single web page.</p>
 
-            <p>This week, you are creating that site! As Elder Uchtdorf shared, "<em>The desire to create is one of the deepest yearnings of the human soul</em>"</p>
+            <p>This week, you are creating that site! As Elder Uchtdorf shared, "<strong>The desire to create is one of the deepest yearnings of the human soul</strong>"</p>
 
               <p>This website will show everything you have learned in this and previous classes for this certificate.</p>
 
