--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
       <ul>
         <li>Open an assignment is Canvas</li>
         <li>Click the Edit button</li>
+        <li>Scroll to the bottom and choose "Assign Access" Manage Assign To</li>
         <li>Click +Add</li>
         <li>Add the student to the "Assign to" box</li>
         <li>Match the due date</li>
