--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </div>
 
     <div class="problem">
-      <p><strong>Slow Starting:</strong> Towards the end of the week, open the "Grades" tab on the left side. From the "W01 Setup: Course Enviormnent" column, select the three dots and choose "Message Students Who". Then select Have not submitted... and send a personalized version of the following message.</p>
+      <p><strong>Slow Starting:</strong> Towards the end of the week, open the "Grades" tab on the left side. From the "W01 Setup: Technology Stack" column, select the three dots and choose "Message Students Who". Then select 'Have not submitted...' and send a personalized version of the following message.</p>
       <section>
         <p>SUBJECT: Group Signup</p>
         <p>One of your first assignments is to pick a group in Canvas and then sign up for the same group in MS Teams. You then introduce yourself to the rest of the group members in MS Teams. You will NOT have a meeting the first week. While many students have completed this task, there are still several who have not. Please try to complete this assignment by the end of the day.<br>Bro/Sis Smith</p>
