--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
 
     <div class="problem">
-      <p><strong>No Submission for Course Home Page:</strong> Towards the end of the week open Canvas, choose Grades and select "W01 Activity: Course Home Page Development" assignment. Choose "Message Students Who" > Have not yet submitted. Send a personalized version of the following message:</p>
+      <p><strong>No Submission for Course Home Page:</strong> Towards the end of the week open Canvas, choose Grades and select "W01 Activity: Course Home Page" assignment. Choose "Message Students Who" > Have not yet submitted. Send a personalized version of the following message:</p>
       <section>
         <p>SUBJECT: Course Home Page Progress</p>
         <p>I noticed that you have not yet submitted your course home page on GitHub. I know it's not due yet, but I wanted to see how you're doing with the assignment. <br>
