--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
 <h3>Notification of Disability Accommodations</h3>
 <p>On occasion you may get a request for disability accommodations for this class. Most of the requested items like extra time on quizzes and deadline extensions are already built into this course. However, if you find a request for Group Work Modification” please send the student a personalized version of the following message.</p>
+<img src="images/accessibility.webp">
 
   <p>Your Accessibility Services letter indicates that you are exempt from group work. If you are able to participate in your group, that would be a good learning experience but you are not required to do so. There are questions every week about your participation in a group. Please answer them in the affirmative so you don't miss any points. <br>
   Bro/Sister Smith
