--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
 
 <h3>Notification of Disability Accommodations</h3>
-<p>On occasion you may get a request for disability accommodations for this class. Most of the requested items like extra time on quizzes and deadline extensions are already built into this course. However, if you find a request for Group Work Modification” please send the student a personalized version of the following message.</p>
+<p>On occasion you may get a request for disability accommodations for this class. Most of the requested items like extra time on quizzes and deadline extensions are already built into this course.</p>
 <img src="images/accessibility.webp">
-
+<p>If you find a request for "Group Work Modification” as shown above, please send the student a personalized version of the following message.</p>
   <p>Your Accessibility Services letter indicates that you are exempt from group work. If you are able to participate in your group, that would be a good learning experience but you are not required to do so. There are questions every week about your participation in a group. Please answer them in the affirmative so you don't miss any points. <br>
   Bro/Sister Smith
   </p>
@@ -397,7 +397,9 @@
       <p><strong>Group Check:</strong> On Monday, go back into Canvas > People > WDD231Groups tab and note the students who are still not signed up for a group. Then look at the grades tab and see which ones have participated and which have not.</p><p>Send <strong>one</strong> of the following messages to each student using the envelope as shown below (green arrow).</p>
       <section>
         <p>SUBJECT: Submitting assignments but no group yet.</p>
-        <p>I see you have been submitting assignments for class but you have not joined a group yet. Is everything OK?</p>
+        <p>I see you have been submitting assignments for class but you have not joined a Canvas group yet. <br>
+          Did you join a Teams group but forget to also join the same group in Canvas?<br>
+        Did you forget to sign up for a group for this class?<br> Is there something I can help with?</p>
         <p>SUBJECT: Not signed up for a group.</p>
         <p>I see that you have not submitted any assignments for class and you have not joined a group yet. Are you going to continue with this class or are you planning to drop? </p>
       </section>
