--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
         <p>I see you have been submitting assignments for class but you have not joined a Canvas group yet. <br>
           Did you join a Teams group but forget to also join the same group in Canvas?<br>
         Did you forget to sign up for a group for this class?<br> Is there something I can help with?</p>
-        <p>SUBJECT: Not signed up for a group.</p>
-        <p>I see that you have not submitted any assignments for class and you have not joined a group yet. Are you going to continue with this class or are you planning to drop? </p>
+        <p>SUBJECT: Not signed up for a group in WDD231.</p>
+        <p>I see that you have not submitted any assignments for WDD231 class and you have not joined a group yet. Are you going to continue with this class or are you planning to drop? </p>
       </section>
       <img src="images/canvas-student.webp">
     </div><!-- end problem -->
