--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!-- *********************** START WEEK 1 HERE *********************** -->
     <h2>WEEK 01 Outreach - <span id="week01start"></span></h2>
     <div class="announce">
-      <p><strong>MS Teams:</strong> On Monday, post the following Announcement to the "General Questions - Week 1" discussion. </p>
+      <p><strong>MS Teams:</strong> On Monday before class begins, post the following Announcement to the "General Questions - Week 1" discussion. </p>
       <section>
         <p>SUBJECT: Week 1: Group Work</p>
         <p>This week, you will NOT have a one-hour group meeting to attend. Instead, you can just introduce yourself to your new group of friends.</p>
