--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div><!-- end problem -->
 
     <div class="problem">
-      <p><strong>No Group:</strong> On Monday, go to Canvas and review the  People > WDD231Groups and identify all students who have not signed up for a group. Return to Canvas and using the Inbox > Compose a New Message send a message to this list of students.</p>
+      <p><strong>No Group:</strong> On Monday, open the "People" tab on the left side. Choose the "WDD231Teams" Tab. From the three dots, select "Message all unasigned Students" and send a personalized version of the following message.</p>
       <section>
         <p>SUBJECT: Selecting a group</p>
         <p>One of your first assignments for last week was to pick a group in Canvas and then sign up for the same group in MS Teams. I see that you have not yet signed up for a Canvas group.🥲  Please try to complete this assignment by the end of the day.<br>
