--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Web Lab Start File">
+  <meta name="description" content="WDD231 Outreach">
   <meta name="author" content="Paul Cheney">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
